--- a/src/Resources/views/mollie/pos/checkout.html.twig
+++ b/src/Resources/views/mollie/pos/checkout.html.twig
@@ -1,39 +1,222 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+</head>
+<body>
+
 <style>
 
-    .center {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        margin-top: -50px;
-        margin-left: -50px;
+    * {
+        box-sizing: border-box;
+    }
 
+    body {
+        background-color: #332d96;
+        font-family: Arial, sans-serif;
+        margin: 0;
+    }
+
+    .mollie-content {
+        position: relative;
+        width: 100%;
+        padding-left: 25px;
+        padding-right: 25px;
+        padding-top: 50px;
+    }
+
+    @media only screen and (min-width: 768px) {
+        .mollie-content {
+            height: 100vh;
+            padding-left: 0;
+            padding-right: 0;
+            padding-top: 0;
+        }
+    }
+
+    .mollie-info-container {
+        background-color: white;
         text-align: center;
+        border-radius: 10px;
+        max-width: 480px;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
     }
 
-    .loader {
-        border: 16px solid #f3f3f3; /* Light grey */
-        border-top: 16px solid #3498db; /* Blue */
-        border-radius: 50%;
-        width: 120px;
-        height: 120px;
-        animation: spin 2s linear infinite;
-
-        margin-top: 10px;
+    @media only screen and (min-width: 768px) {
+        .mollie-info-container {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
     }
 
-    @keyframes spin {
-        0% {
-            transform: rotate(0deg);
+    .mollie-info-container.m-info-show {
+        display: block;
+    }
+
+    .mollie-info-container.m-info-hide {
+        display: none;
+    }
+
+    .mollie-headline-container {
+        padding-top: 50px;
+        padding-left: 25px;
+        padding-right: 25px;
+        padding-bottom: 10px;
+    }
+
+    @media only screen and (min-width: 768px) {
+        .mollie-headline-container {
+            padding-left: 45px;
+            padding-right: 45px;
         }
-        100% {
-            transform: rotate(360deg);
+    }
+
+    .mollie-headline-container span {
+        color: #666666;
+        font-size: 1rem;
+    }
+
+    .mollie-headline-container .m-headline {
+        margin-top: 15px;
+    }
+
+    .mollie-headline-container p {
+        margin-bottom: 30px;
+        color: #666666;
+        font-size: 1rem;
+    }
+
+    .mollie-headline-container .m-button {
+        margin-bottom: 25px;
+    }
+
+    .mollie-image-container img {
+        max-width: 100%;
+    }
+
+    .m-headline {
+        font-size: 1.5em;
+        color: #333333;
+    }
+
+    .m-button {
+        background-color: #0077ff;
+        display: flex;
+        text-decoration: none;
+        color: white;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+        border-radius: 8px;
+    }
+
+    .m-button svg {
+        width: 20px;
+        height: 20px;
+        fill: white;
+        margin-left: 2px;
+    }
+
+    .mollie-footer {
+        width: 100%;
+        z-index: 99;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        align-items: center;
+        padding-bottom: 40px;
+        padding-left: 25px;
+        padding-right: 25px;
+        padding-top: 40px;
+    }
+
+    @media only screen and (min-width: 768px) {
+        .mollie-footer {
+            position: fixed;
+            flex-direction: row;
+            bottom: 0;
+            padding-top: 0;
+            padding-left: 40px;
+            padding-right: 40px;
         }
+    }
+
+    .mollie-footer .mollie-back-link {
+        text-decoration: none;
+        color: white;
+        display: flex;
+        align-items: center;
+        margin-bottom: 10px;
+    }
+
+    @media only screen and (min-width: 768px) {
+        .mollie-footer .mollie-back-link {
+            margin-bottom: 0;
+        }
+    }
+
+    .mollie-footer .mollie-back-link svg {
+        width: 15px;
+        height: 15px;
+        fill: white;
+        margin-right: 3px;
+    }
+
+    select {
+        background-color: #0f0d2c;
+        border: none;
+        color: white;
+        border-radius: 4px;
+        padding: 6px;
     }
 
 </style>
 
-<script>
 
+
+<div class="mollie-content js-mollie-content">
+    <div class="mollie-info-container js-info-loading m-info-show">
+        <div class="mollie-headline-container">
+            <div class="mollie-headline">
+                <span>Terminal name</span>
+                <h2 class="m-headline loading">Follow the instructions on the terminal</h2>
+                <h2 class="m-headline success" style="display:none">Your payment was successful!</h2>
+                <h2 class="m-headline failed" style="display:none">Your payment was not successful!</h2>
+                <p class="failed" style="display:none">No money has been debited from the debit card</p>
+                <a href="#" title="Return to website" id="returnButton" class="m-button" style="display:none">
+                    Return to website
+                    <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><path d="M17.17 32.92l9.17-9.17-9.17-9.17 2.83-2.83 12 12-12 12z"/><path d="M0-.25h48v48h-48z" fill="none"/></svg>
+                </a>
+            </div>
+            {% if changeStatusUrl %}
+                <a href="{{ changeStatusUrl }}" title="Change Status in Test Mode" target="_blank" class="m-button">
+                    Change Status in Test Mode
+                    <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><path d="M17.17 32.92l9.17-9.17-9.17-9.17 2.83-2.83 12 12-12 12z"/><path d="M0-.25h48v48h-48z" fill="none"/></svg>
+                </a>
+            {% endif %}
+        </div>
+        <div class="mollie-image-container loading">
+            <img srcset="{{ asset('bundles/molliepayments/static/img/pos/loading@2x.png', 'asset') }} 2x {{ asset('bundles/molliepayments/static/img/pos/loading@3x.png', 'asset') }} 3x" src="{{ asset('bundles/molliepayments/static/img/pos/loading.png', 'asset') }}" alt="Mollie" />
+        </div>
+        <div class="mollie-image-container success" style="display:none">
+            <img srcset="{{ asset('bundles/molliepayments/static/img/pos/success@2x.png', 'asset') }} 2x {{ asset('bundles/molliepayments/static/img/pos/success@3x.png', 'asset') }} 3x" src="{{ asset('bundles/molliepayments/static/img/pos/success.png', 'asset') }}" alt="Mollie" />
+        </div>
+        <div class="mollie-image-container failed" style="display:none">
+            <img srcset="{{ asset('bundles/molliepayments/static/img/pos/failed@2x.png', 'asset') }} 2x {{ asset('bundles/molliepayments/static/img/pos/failed@3x.png', 'asset') }} 3x" src="{{ asset('bundles/molliepayments/static/img/pos/failed.png', 'asset') }}" alt="Mollie" />
+        </div>
+    </div>
+</div>
+
+
+<script>
+    const returnButton = document.getElementById('returnButton');
+    const loadingElements = Array.from(document.getElementsByClassName('loading'));
+    const successElements = Array.from(document.getElementsByClassName('success'));
+    const failedElements = Array.from(document.getElementsByClassName('failed'));
     function requestStatus() {
         const xhr = new XMLHttpRequest();
         xhr.open('GET', '/mollie/pos/{{ swOrderId }}/{{ molliePaymentId }}/status');
@@ -44,7 +227,22 @@
             const json = JSON.parse(response.target.response);
 
             if (json.ready) {
-                window.location.href = json.redirectUrl;
+                clearInterval(interval);
+                loadingElements.forEach(function(element){
+                    element.style.display = 'none';
+                });
+                returnButton.style.display = 'block';
+                returnButton.href= json.redirectUrl;
+                if(json.status === 'open' || json.status === 'paid'){
+                    successElements.forEach(function(element){
+                        element.style.display = 'block';
+                    });
+                }else{
+                    failedElements.forEach(function(element){
+                        element.style.display = 'block';
+                    });
+                }
+
             }
         };
 
@@ -53,24 +251,35 @@
             const json = JSON.parse(response.target.response);
 
             if (json.ready) {
-                window.location.href = json.redirectUrl;
+                clearInterval(interval);
+                loadingElements.forEach(function(element){
+                    element.style.display = 'none';
+                });
+
+                returnButton.style.display = 'block';
+                returnButton.href= json.redirectUrl;
+
+
+                returnButton.style.display = 'block';
+                returnButton.href= json.redirectUrl;
+                if(json.status === 'open' || json.status === 'paid'){
+                    successElements.forEach(function(element){
+                        element.style.display = 'block';
+                    });
+                }else{
+                    failedElements.forEach(function(element){
+                        element.style.display = 'block';
+                    });
+                }
+
             }
         };
 
         xhr.send();
     }
 
-    setInterval(requestStatus, 2000);
-
+    const interval = setInterval(requestStatus, 2000);
 </script>
-<div class="center">
-    waiting for payment...<br/>
-    please see Mollie terminal
-</div>
-<div class="loader center"></div>
 
-{% if changeStatusUrl %}
-    <div class="center" style="margin-top:180px;">
-        <a href="{{ changeStatusUrl }}" target="_blank">Change Status in Test Mode</a>
-    </div>
-{% endif %}
+</body>
+</html>
